# team11-aws-hackathon

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  TODO 2.md  TODO.md  directory_of_ide.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  production_server.py  requirements.txt  simple_server.py  teamsync.db  working_server.py
1.code/: README.md  add_tags_api.py  admin_deployment_summary.py  admin_dynamodb_tables.py  admin_panel_deployment_output.py  admin_panel_summary.py  admin_spa.html  cdk-exec-role-policy.json  deploy_admin_panel.py  deploy_admin_simple.py  deploy_api_docs.py  deploy_pkce_spa.py  deploy_swagger_ui.py  deploy_web_stack.py  fix_cloudfront_access.py  fix_cloudfront_oac.py  fix_google_login.py  fix_google_login_complete.py  fix_login_flow.py  google_login_fix_summary.py  implement_pkce_flow.py  login_flow_final_verification.py  pkce_implementation_summary.py  pyproject.toml  quick_admin_smoke_test.py  setup_instructions.py  terraform_summary.py  test_admin_endpoints.py  test_tags_api.py  update_admin_openapi.py  update_cognito_config.py  update_cognito_with_real_cloudfront.py  verify_google_login.py
1.code/cdk.out/: Api-dev.assets.json  Api-dev.template.json  Auth-dev.assets.json  Auth-dev.template.json  Data-dev.assets.json  Data-dev.template.json  Observability-dev.assets.json  Observability-dev.template.json  Web-dev.assets.json  Web-dev.template.json  manifest.json  tree.json
1.code/docs/: API.md  index.html  openapi.json  openapi.yaml
1.code/extension/: EXTENSION_ARCHITECTURE.md  README.md  (+2 more)
(+167 files in other folders)
